# resume-matcher

./: .gitignore  .replit  pyproject.toml  replit.md
backend/: main.py  requirements.txt
docs/: CNAME  index.html
frontend/: index.html
